@@ -10,7 +10,7 @@ AC_CONFIG_AUX_DIR(../../cnf)
 AC_CANONICAL_TARGET
 
 # From aclocal.m4:
-GP_C_LONG_ALIGN
+GP_C_LONG_ALIGN_IO
 GP_CFLAGS
 GP_LDFLAGS
 GP_PROG_CC_DYNFLAGS
