@@ -10,22 +10,8 @@
 ##  easier access from the GAP level. 
 ##
 
-################################
-# First look after our C part: #
-################################
-
-# load kernel function if it is installed:
-if (not IsBound(IO)) and ("io" in SHOW_STAT()) then
-  # try static module
-  LoadStaticModule("io");
-fi;
-if (not IsBound(IO)) and
-   (Filename(DirectoriesPackagePrograms("io"), "io.so") <> fail) then
-  LoadDynamicModule(Filename(DirectoriesPackagePrograms("io"), "io.so"));
-fi;
-
 #####################################
-# Then some technical preparations: #
+# Some technical preparations:      #
 #####################################
 
 # The family:
