@@ -9,6 +9,20 @@
 ##  Initialization of the IO package
 ##  
 
+################################
+# First look after our C part: #
+################################
+
+# load kernel function if it is installed:
+if (not IsBound(IO)) and ("io" in SHOW_STAT()) then
+  # try static module
+  LoadStaticModule("io");
+fi;
+if (not IsBound(IO)) and
+   (Filename(DirectoriesPackagePrograms("io"), "io.so") <> fail) then
+  LoadDynamicModule(Filename(DirectoriesPackagePrograms("io"), "io.so"));
+fi;
+
 ReadPackage("IO", "gap/io.gd");
 ReadPackage("IO", "gap/pickle.gd");
 ReadPackage("IO", "gap/realrandom.gd");
